alpha-test-case/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: alpha
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: yeasy/simple-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
