alpha-test-case/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: alpha
spec:
  selector:
    app: hello
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
