alpha-test-case/wow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wow-service
  namespace: alpha
spec:
  selector:
    app: wow
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
