alpha-test-case/alpha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alpha-ingress
  namespace: alpha
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: alpha.cherry.mango
    http:
      paths:
      - backend:
        path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 8080
      - backend:
        path: /wow
        pathType: Prefix
        backend:
          service:
            name: wow-service
            port:
              number: 8080
